# vanitas

./: .gitignore  PLAN.md  PROBLEM.md  README.md  pyproject.toml  requirements.txt  run_local_train.py  train_modal.py  train_modal_v2.py  upload_to_hf.py
final/: README.md  paper_figures.py  sakura_binding_eval.py
scratch/: test_inference.py  test_vocoder.py
scripts/: audit_checkpoint.py  behavior_eval.py  generate_audio_diagnostic.py  quantize_model.py  test_features.py  test_live_inference.py  test_mic.py  test_perception.py
scripts/v2/: stage0_sanity.py
tests/: test_cognition.py  test_full_model.py
vanitas/: __init__.py  config.py  main.py
vanitas/audio/: __init__.py  capture.py  features.py  playback.py  utils.py
vanitas/baseline/: __init__.py  asr.py  pipeline.py  tts.py  vad.py
vanitas/inference/: client.py  server.py
vanitas/model/: __init__.py  adapters.py  config.py  vanitas.py
vanitas/model/cognition/: __init__.py  core.py  memory.py  retrieval.py  speech_memory.py  text_embedding.py
vanitas/model/gates/: fusion.py
vanitas/model/perception/: state.py  stream.py
vanitas/model/production/: __init__.py  flow_head.py  stream.py  vocoder.py
vanitas/pipeline/: __init__.py  orchestrator.py
vanitas/quantization/: __init__.py  calib_loader.py  quantizer.py
vanitas/training/: check_dataset_load.py  dataset.py  losses.py  trainer.py
vanitas/v2/: README.md  __init__.py
vanitas/v2/codec/: __init__.py  snac_wrapper.py
vanitas/v2/continual/: __init__.py
vanitas/v2/data/: __init__.py
vanitas/v2/distillation/: __init__.py
(+13 files in other folders)
